owl-carousel overflow:hidden. fixes #1

--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,10 @@ div#left {
 	float: left;
 }
 
+div#right {
+	overflow: hidden;
+}
+
 div#divReport {
 	width: 100%;
 }
